[project]
name = "ldn-tunneling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ldn @ git+https://github.com/u1f992/LDN.git@7289995ba07b65ad05ee556b705bec43b3fcd06c",
    "pyroute2>=0.9.5",
]

[tool.mypy]
ignore_missing_imports = true
