[project]
name = "ldn-tunneling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ldn @ git+https://github.com/u1f992/LDN.git@b45165aad9782364ac7c8f158bcab1a205688d4d",
    "pyroute2>=0.9.5",
]

[tool.mypy]
ignore_missing_imports = true
