[project]
name = "ldn-tunneling"
version = "0.1.0"
description = "Bridge Nintendo Switch LDN sessions across the internet using MAC-spoofed STA relay (proof of concept)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ldn @ git+https://github.com/u1f992/LDN.git@4f7f0e225672187c4d96dcbdceed27a31bbd6d1b",
    "pyroute2>=0.9.5",
]

[tool.mypy]
ignore_missing_imports = true
